--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
       <p>A global load balancer available in GCP. It is used to load balance HTTP and HTTPS traffic.</p>
     </div>
   </div>
+  <div class="container right">
+    <div class="content">
+      <h2>What is Deployment Manager?</h2>
+      <p>The GCP service for creating resources using a config file made up of resource specifications defined in YAML syntax.</p>
+    </div>
+  </div>
 </div> 
 </body>
 
