added flip card logic

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   </div>
   <div class="container right">
     <div class="content">
-      <h2>When estimating the cost of running a BigQuery query what two services withtin the Google Cloud Platform will you need to use?</h2>
-      <p>Pricing Calculator ang BigQuery itself.</p>
+      <h2>When estimating the cost of running a BigQuery query what two services within the Google Cloud Platform will you need to use?</h2>
+      <p>Pricing Calculator and BigQuery itself.</p>
     </div>
   </div>
   <div class="container left">
@@ -88,6 +88,20 @@
       <p>Never. Cloud Spanner is a managed service.</p>
     </div>
   </div>
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>Paris</h2>
+            </div>
+            <div class="flip-box-back">
+              <p>What an amazing city</p>
+            </div>
+          </div>
+        </div> 
+    </div>
+  </div>  
 </div> 
 </body>
 
