update font colors and size

--- a/index.html
+++ b/index.html
@@ -9,99 +9,203 @@
 </head>
 
 <body>
-   <div class="timeline">
+<div class="timeline">
   <div class="container left">
     <div class="content">
-      <h2>What kind of database has been the primary form of data storage for decades and supports frequent queries and updates to date?</h2>
-      <p>Relational databases, such as Cloud SQL, Cloud Spanner and BigQuery.</p>
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What kind of database has been the primary form of data storage for decades and supports frequent queries and updates to date?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Relational databases, such as Cloud SQL, Cloud Spanner and BigQuery.</h3>
+            </div>
+          </div>
+        </div>            
     </div>
   </div>
-  <div class="container right">
-    <div class="content">
-      <h2>What kind of data model is used by Datastore?</h2>
-      <p>Document.</p>
-    </div>
-  </div>
-  <div class="container left">
-    <div class="content">
-      <h2>What is HTTP/HTTPS load balancing?</h2>
-      <p>A global load balancer available in GCP. It is used to load balance HTTP and HTTPS traffic.</p>
-    </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <h2>What is Deployment Manager?</h2>
-      <p>The GCP service for creating resources using a config file made up of resource specifications defined in YAML syntax.</p>
-    </div>
-  </div>
-  <div class="container left">
-    <div class="content">
-      <h2>How do you view roles assigned to identities?</h2>
-      <p>Use the Roles tab in IAM & Admin section of the console to get a list of identities assigned to particular roles. You can also use <i>gcloud projects get-iam-policy</i> to list roles assigned to users in a project</p>
-    </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <h2>When estimating the cost of running a BigQuery query what two services within the Google Cloud Platform will you need to use?</h2>
-      <p>Pricing Calculator and BigQuery itself.</p>
-    </div>
-  </div>
-  <div class="container left">
-    <div class="content">
-      <h2>what three characteristics are load balancers distinguished by?</h2>
-      <p>Global versus regional load balancing, external versus internal load balancing, and the protocols supported.</p>
-    </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <h2>Is the file form YAML supported when importing data into BigQuery?</h2>
-      <p>No. However CSV, Parquet, and Avro are supported.</p>
-    </div>
-  </div>
-    <div class="container left">
-    <div class="content">
-      <h2>When using versioning on a bucket, what is the latest version of the object called?</h2>
-      <p>Live version.</p>
-    </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <h2>In the App Engine hierarchy, which two components are below the Service level?</h2>
-      <p>Versions and Instances.</p>
-    </div>
-  </div>
-  <div class="container left">
-    <div class="content">
-      <h2>What are the two types of App Engine runtime environments?</h2>
-      <p>Standard and Flexible.</p>
-    </div>
-  </div>
-  <div class="container right">
-    <div class="content">
-      <h2>When creating an instance, which tier of the hierarchy must contain it?</h2>
-      <p>The Project tier.</p>
-    </div>
-  </div>
-  <div class="container left">
-    <div class="content">
-      <h2>According to Google best practices, how often should you update virtual machine packages using <i>apt-get</i> on your created Cloud Spanner instances and database?</h2>
-      <p>Never. Cloud Spanner is a managed service.</p>
-    </div>
-  </div>
+
   <div class="container right">
     <div class="content">
        <div class="flip-box">
           <div class="flip-box-inner">
             <div class="flip-box-front">
-              <h2>Paris</h2>
+              <h2>What kind of data model is used by Datastore?</h2>
             </div>
             <div class="flip-box-back">
-              <p>What an amazing city</p>
+              <h3>Document.</h3>
             </div>
           </div>
-        </div> 
+        </div>            
+    </div>
+  </div>
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What is HTTP/HTTPS load balancing?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>A global load balancer available in GCP. It is used to load balance HTTP and HTTPS traffic.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What is Deployment Manager?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>The GCP service for creating resources using a config file made up of resource specifications defined in YAML syntax.</h3>
+            </div>
+          </div>
+        </div>            
     </div>
   </div>  
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>How do you view roles assigned to identities?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Use the Roles tab in IAM & Admin section of the console to get a list of identities assigned to particular roles. You can also use <i>gcloud projects get-iam-policy</i> to list roles assigned to users in a project</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>    
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>When estimating the cost of running a BigQuery query what two services within the Google Cloud Platform will you need to use?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Pricing Calculator and BigQuery itself.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>    
+
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What three characteristics are load balancers distinguished by?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Global versus regional load balancing, external versus internal load balancing, and the protocols supported.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>      
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>Is the file form YAML supported when importing data into BigQuery?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>No. However CSV, Parquet, and Avro are supported.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>        
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>When using versioning on a bucket, what is the latest version of the object called?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Live version</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div> 
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>In the App Engine hierarchy, which two components are below the Service level?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Versions and Instances.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div> 
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What are the two types of App Engine runtime environments?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Standard and Flexible.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>   
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>When creating an instance, which tier of the hierarchy must contain it?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>The Project tier.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>  
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>According to Google best practices, how often should you update virtual machine packages using <i>apt-get</i> on your created Cloud Spanner instances and database?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Never. Cloud Spanner is a managed service.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>   
+
 </div> 
 </body>
 
