added more flip cards

--- a/index.html
+++ b/index.html
@@ -206,6 +206,307 @@
     </div>
   </div>   
 
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What other Google Cloud Platform service does Cloud Spanner use when importing and exporting?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Dataflow.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>  
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What are the two types of billing accounts?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Invoiced and self-serve-billing accounts.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>     
+
+  ----------------------------HEMANTH-------------------
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>IAM roles include a collection of what?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Permissions.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>  
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What kind of bucket storage class cannot be changed to another class once it is set?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Coldline storage.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>     
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What are the three types of roles?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Primitive roles, Predefined roles and Custom roles.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>  
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>Which Google Cloud Computing product is a good serverless option for running a set of tightly related services?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>App Engine.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>     
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What command is used to create a DNS zone in the command line?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>gcloud dns managed-zones create.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>  
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What is a log sink?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>A storage source outside of Stackdriver for retaining logs greater than Stackdriver's 30-day retention period. Log sinks can be Cloud Storage buckets, BigQuery data sets, and Cloud Pub/Sub topics.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>     
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>Which Cloud Storage class has the lowest per gigabyte charge?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Coldline storage class.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>  
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>Which App Engine component enables migration to a newer component?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Versions.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>     
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What are key factors to keep in mind when choosing a storage solution?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Read and Write patterns, consistency, transaction support, cost and latency.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>  
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What is the name of a single running instance in a Kubernetes cluster?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>A Pod.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>     
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What component(s) need to be configured when creating a TCP Proxy load balancer?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Frontend and backend.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>  
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>A VM created using the command <i>gcloud compute instances create --machine-type=n1-standard-4 web-server-1</i> will have how many CPUs?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>Four.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>     
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What do you need to specify when defining a custom metric?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>A type name, a project, a display name and description, a metric kind, metric labels and monitored resource objects to include with time-series data points.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>  
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>Does the Compute Engine Network Admin role have permission to create instances?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>No.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>     
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What is a bucket in terms of Cloud Storage?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>A container for holding objects in Cloud Storage. Bucket names are unique across Cloud Storage. Buckets have a geographic location and a storage class. Storage classes are multi-regional, regional, nearline and coldline.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>  
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>How long does Stackdriver Logging store log data?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>30 days.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>     
+
+  <div class="container right">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>What query language is used by Datastore?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>GQL.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>  
+
+  <div class="container left">
+    <div class="content">
+       <div class="flip-box">
+          <div class="flip-box-inner">
+            <div class="flip-box-front">
+              <h2>In the context of GCP, what is a role?</h2>
+            </div>
+            <div class="flip-box-back">
+              <h3>A collection of permissions.</h3>
+            </div>
+          </div>
+        </div>            
+    </div>
+  </div>     
+
 </div> 
 </body>
 
